# interceptor-physics-sitl

./: .gitignore  README.md  UAV_Dynamics_Autopilot_Communication.slx  io_tables.xlsx  pyproject.toml  requirements.txt
apx4-autopilot-comms/px4-interface/: model.py
apx4-autopilot-comms/px4-interface/io-port/: README.md  tcp_io.py  udp_io.py
apx4-autopilot-comms/px4-interface/matlab-code-generated-fdm/: UAV_Dynamics.h  c_wrapper.c  model2.py
research/autopilot-to-fdm/: bridge_source.py  buffer-gate.py
sim/kernel/scheduler/: scheduler_busy_wait.py
sim/px4-interface/: readme.md
sim/px4-interface/analysis/: timestamp_fdm.py
sim/px4-interface/interface/: Makefile  libPlant.c  libfdm.c  px4_interface_sitl.py  px4_plugin.py
sim/px4-interface/matlab-code-generated-fdm/: UAV_Dynamics.c  UAV_Dynamics.h  UAV_Dynamics_data.c  UAV_Dynamics_private.h  UAV_Dynamics_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
sim/px4-interface/test/: px4_waypoint_test.py
sim/px4_interface/: README.md
sim/px4_interface/analysis/: __init__.py  loggerModu.py  timestamp_fdm.py
sim/px4_interface/interface/: ground_station.py  px4_interface_sitl.py
sim/px4_interface/io-port/: tcp_io.py
sim/px4_interface/kernel/: scheduler.py
sim/px4_interface/samples/: README.md
sim/px4_interface/test/: fdm_log.txt  gps_log.txt  grant_test.py  heartbeat_log.txt  interface_test.py  loggerServerTest.py  px4_sitl_kernel_test.py  sensor_log.txt  state_q_log.txt
sim/visualizer/: README.md
sim/visualizer/interface/: client.py
(+33 files in other folders)
